--- a/package.json
+++ b/package.json
@@ -2,4 +2,8 @@
   "name": "rails-five-one-five",
   "private": true,
   "dependencies": {}
+  "engines": {
+    "node": "6.x",
+    "yarn": "1.0.2"
+  }
 }
